--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,4 +18,5 @@ layout: default
     <div class="post__content"?>
         {{ content }}
     </div>
+		<p>Comments? Get in contact via <a href="https://twitter.com/MatthiasLaug">Twitter</a></p>
 </div>
